--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,138 @@
-apply plugin:'groovy'
-apply plugin:'eclipse'
-apply plugin:'java'
 
+apply plugin: "groovy"
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'maven'
+apply plugin: 'project-report'
+apply plugin: 'pmd'
+apply plugin: 'application'
+apply plugin: 'build-dashboard'
+apply from: './properties.gradle'
+
+
+description = "common dao"
 
 applicationDefaultJvmArgs = ["-Dfile.encoding=UTF=8"]
 libsDirName = './target'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+[compileJava, compileTestJava]*.options*.compilerArgs = [
+    "-Xlint:none",
+    "-g",
+    "-encoding",
+    "UTF-8"
+]
+
+install {
+    repositories.mavenInstaller {
+        pom.version = '0.0.1'
+        pom.artifactId = 'commonDao'
+        pom.groupId = 'pl.java.scalatech'
+    }
+}
 
 repositories {
-   mavenLocal()
-   mavenCentral()
+    mavenCentral()
+    mavenLocal()
+    maven { url "http://localhost:8487/nexus/content/groups/public/"}
+    maven { url "https://repository.jboss.org/nexus/content/groups/public/"}
+    maven { url "http://repo.spring.io/libs-release-local/"}
+    maven { url "http://repo.spring.io/libs-milestone" }
 }
 
-task wrapper(type:Wrapper) {
-    gradleVersion = '1.9'
+sourceSets {
+    intTest
+    main {
+        java { srcDir 'src/main/java' }
+        groovy { srcDir 'src/main/groovy' }
+        resources { srcDir 'src/main/resources' }
+    }
+    test {
+        java { srcDir 'src/test/java' }
+        groovy { srcDir 'src/test/groovy' }
+        resources { srcDir 'src/test/resources' }
+    }
 }
-
 
 dependencies {
-    def slf4jVersion = "1.7.5"
-    def junitVersion = "4.11"
-    def hamcrestVersion = "1.3"
-    def mockitoVersion  = "1.9.5"
-    def festAssertVersion = "1.4"
-    def logbackVersion = "1.0.13"
-    def guavaVersion = "14.0.1"
-    def lombokVersion = "1.12.2"
- 
-    compile "org.codehaus.groovy:groovy-all:2.2.1"
-    compile("org.projectlombok:lombok:$lombokVersion")
-    compile("com.google.guava:guava:$guavaVersion")
+    compile ("org.codehaus.groovy:groovy:${groovyVersion}")
+    compile ("org.springframework:spring-core:${springVersion}")
+    compile ("org.springframework:spring-beans:${springVersion}")
+    compile ("org.springframework:spring-context:${springVersion}")
+    compile ("org.springframework:spring-orm:${springVersion}")
+    compile ("org.springframework:spring-tx:${springVersion}")
+    testCompile ("org.springframework:spring-test:${springVersion}")
+
+    compile ("org.springframework.data:spring-data-jpa:${springDataJPAVersion}")
+
+    compile ("javax.validation:validation-api:${javaxValidationVersion}")
+    compile ("org.hibernate:hibernate-validator:${hibernateValidatorVersion}")
+    compile ("org.hibernate:hibernate-core:${hibernateVersion}")
+    compile ("org.hibernate:hibernate-entitymanager:${hibernateVersion}")
+    compile ("org.hibernate:hibernate-ehcache:4.3.1.Final")
+    
+    compile("org.projectlombok:lombok:${lombokVersion}")
+    compile("com.google.guava:guava:${guavaVersion}"){
+        transitive = true
+    }
+
+    compile("com.jolbox:bonecp:${bonecpVersion}")
+     
+    compile("com.jolbox:bonecp-spring:${bonecpVersion}" )
+       
+    compile("com.jolbox:bonecp-provider:${bonecpProviderVersion}")
+     
+    compile("org.jasypt:jasypt:${jasyptVersion}")
+    runtime("org.hsqldb:hsqldb:${hsqldbVersion}")
+
     compile("org.slf4j:slf4j-api:$slf4jVersion")
     compile("org.slf4j:slf4j-ext:$slf4jVersion")
-    compile("ch.qos.logback:logback-classic:$logbackVersion")
+    runtime("ch.qos.logback:logback-classic:$logbackVersion")
     compile("ch.qos.logback:logback-core:$logbackVersion")
-    compile("org.projectlombok:lombok:$lombokVersion")
-    testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
+
+      
+    testCompile("mysql:mysql-connector-java:${mysqlVersion}")
     testCompile("org.hamcrest:hamcrest-all:$hamcrestVersion")
     testCompile("org.mockito:mockito-all:$mockitoVersion")
-    testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
     testCompile("junit:junit:$junitVersion")
-    
-    
+    testCompile("org.easytesting:fest-assert:${festAssertVersion}")
+    testCompile("com.googlecode.catch-exception:catch-exception:1.2.0")
+    testCompile ("org.spockframework:spock-core:${spockVersion}")
+    testCompile ("org.spockframework:spock-spring:${spockVersion}")
+
+        
 }
+
+configurations {
+    all {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+        exclude group: "commons-logging"
+        exclude module: "slf4j-log4j12"
+        exclude module: "hibernate-jpa-2.0-api"
+        
+        
+    }
+}
+
+task listJars << {
+    configurations.compile.each { File file -> println file.name }
+}
+
+jar {
+    baseName = 'commonDao'
+    version =  '0.0.1'
+
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
+    manifest {
+        attributes 'Implementation-Title': 'groovy_example',
+        'Implementation-Version': version,
+        'Built-By': System.getProperty('user.name'),
+        'Built-Date': new Date(),
+        'Built-JDK': System.getProperty('java.version'),
+        'Built-Gradle': gradle.gradleVersion
+    }
+}
+
+task wrapper(type: Wrapper) { gradleVersion = '10.1' }
