--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile("com.google.guava:guava:$guavaVersion")
     compile("org.slf4j:slf4j-api:$slf4jVersion")
     compile("org.slf4j:slf4j-ext:$slf4jVersion")
-    compile("ch.qos.logback:logback-classic:$logbackVersion")
+    runtime("ch.qos.logback:logback-classic:$logbackVersion")
     compile("ch.qos.logback:logback-core:$logbackVersion")
     compile("org.projectlombok:lombok:$lombokVersion")
     testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
